--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<title>Hospital</title>
+<title>REPORTING</title>
 <link rel="icon" href="assets/img/logo.png" type="image/png">
 
 <link rel="stylesheet" href="assets/css/bootstrap1.min.css" />
